[package]
name = "libssh-sys-dylib"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = ["Tomas Olvecky <tomas.olvecky@gmail.com>"]
keywords = ["ssh", "libssh"]
readme = "README.md"
repository = "https://github.com/tomasol/libssh-sys-dylib"
homepage = "https://github.com/tomasol/libssh-sys-dylib"
description = """
Bindings to libssh for creating SSH servers and clients, etc.
Links dynamically to systeml's libssh library.
"""
exclude = [".github"]
[dependencies]

[build-dependencies]
bindgen = "*"
